[package]
name = "rust_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.3"
aws-sdk-ssm = "1.22.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["std", "derive", "serde_derive"] }
serde_json = { version = "1.0.116", default-features = true }
